// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forwards ref 1`] = `
<ForwardRef(forwardRef)
  className="Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase"
  classes={Object {}}
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders a medium sized, alert colored filled button with fullWidth 1`] = `
<ForwardRef(forwardRef)
  className="Button-root Button-sizeRegular Button-colorAlert colorAlert Button-variantRegular Button-uppercase Button-fullWidth fullWidth"
  classes={Object {}}
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders active state 1`] = `
<ForwardRef(forwardRef)
  aria-pressed={true}
  className="Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase Button-active active"
  classes={Object {}}
  data-active={true}
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;

exports[`renders correctly 1`] = `
<ForwardRef(forwardRef)
  className="Button-root Button-sizeRegular Button-colorRegular Button-variantRegular Button-uppercase"
  classes={
    Object {
      "keyboardFocus": "keyboardFocus",
      "mouseHover": "mouseHover",
    }
  }
  data-variant="regular"
>
  Push me
</ForwardRef(forwardRef)>
`;
